# costar_scraping_task

./: README.md  pyproject.toml
costar_scraping/armada_scraping/: part1.json  scrapy.cfg
costar_scraping/armada_scraping/armada_scraping/: items.py  middlewares.py  pipelines.py  settings.py
costar_scraping/armada_scraping/armada_scraping/spiders/: spider_part1.py
