[tool.poetry]
name = "CoStar_Scraping"
version = "0.1.0"
description = ""
authors = ["JODLYO <joe.odonnell27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
